--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <!-- jQuery -->
-    <link href="https://code.jquery.com/jquery-3.2.1.min.js"
+    <link href="https://code.jquery.com/jquery-3.2.1.min.js">
 
 </head>
 <body>
@@ -27,7 +27,7 @@
                 <div class="container">
                     <div class="navbar">
                         <div class="nav-logo">
-                            <a href="index.html"> <img src="img/logo.png" alt="logo" height="60" width="280"></img></a>
+                            <a href="index.html"> <img src="img/logo.png" alt="logo" height="60" width="280"></a>
                         </div>
                     </div>
                     <div class="main-menu-content">
@@ -141,7 +141,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><feature/td>
+                            <td>feature/td>
                             <td>
                                 <img src="img/odhaczenie.png" height="25" width="25"/>
                             </td>
@@ -196,7 +196,7 @@
                             <div class="single-col">
                                 <form action="#">
                                     <p>your mail:</p>
-                                    <input type="email" name="email">
+                                    <input type="email" name="email" title="e-mail">
                                     <p>your message:</p>
                                     <textarea name="message" cols="50" rows="10">Here write a message...</textarea>
                                     <br /><br /><br />
