--- a/public/szablon.html
+++ b/public/szablon.html
@@ -17,8 +17,8 @@
                 <div class="container">
                     <div class="navbar">
                         <div class="nav-logo">
-                            <a href="index.html"> <img src="img/logo.jpg" alt="logo"></a>
-                            <a><img src="img/logo.jpg" height="66" width="280" alt="logo2"/></img></a>
+                            <a href="index.html"> <img src="img/logo.png" alt="logo"></a>
+                            <a><img src="img/logo.png" height="66" width="280" alt="logo2"/></a>
                         </div>
                     </div>
                     <div class="main-menu-content">
